# simulation_ros

./: FINAL_VALIDATION_REPORT.md  README.md  create_gazebo_launch.sh  debug_project.sh  deploy_arm6_adaptive.sh  deploy_to_wsl2.sh  fix_jazzy_installation.sh  fix_package_and_rebuild.bat  fix_package_and_rebuild.sh  fix_ros2_installation.sh  install_xacro_and_rebuild.sh  migrate_arm_urdf.bat  migrate_arm_urdf.sh  quick_fix_and_build.sh  setup_ros2_workspace.sh  simple_validation.sh  test_arm6_setup.sh  test_joint_axes.bat  test_joint_axes.sh  update_launch_files.sh  validate_ros2_package.py
arm6/: CMakeLists.txt
arm6/launch/: display.launch  display_ros2.launch.py  display_xacro.launch.py  gazebo_ros2.launch.py  gazebo_sim.launch.py
arm6/meshes/: Link2.STL  Link3.STL  Link4.STL
arm6/scripts/: test_arm_movement.py
arm6/urdf/: arm6.csv  arm6.urdf  arm6.urdf.xacro
arm_urdf/: CMakeLists.txt  README.md  package.xml
arm_urdf/config/: arm_urdf.rviz
docs/: JOINT_CONTROL_FIX.md  PROJECT_CLEANUP_REPORT.md  PROJECT_SUMMARY.md  ROS2_Setup_Tutorial.md  STEP_to_URDF_Tutorial.md  USAGE_INSTRUCTIONS.md
scripts/: deploy_to_wsl2.sh  diagnose_ros2.sh  quick_start.sh  setup_ros2_workspace.sh  test_joint_control.sh
test_ws/src/arm6/: CMakeLists_ros2.txt  package.xml  package_ros2.xml
test_ws/src/arm6/config/: arm6.rviz  arm_controllers.yaml
test_ws/src/arm6/launch/: display_ros2.launch.py  gazebo_ros2.launch.py
test_ws/src/arm6/meshes/: Link1.STL  base_link.STL
test_ws/src/arm6/urdf/: arm6.urdf  arm6_ros2_control.urdf.xacro
test_ws/src/arm6/worlds/: empty.world
(+2 files in other folders)
